<resources>
    <string name="app_name">foodTrex</string>
    <string name="profile">Your Profile</string>
    <string name="profile_title">Profile</string>
    <string name="cart">Your Cart</string>
    <string name="cart_title">Meals</string>
    <string name="our_desert">Our desert</string>
    <string name="our_dishes">Our Main</string>
    <string name="our_entries">Our entries</string>
    <string name="name">Paul-Emile</string>
    <string name="greeting">Welcome Back</string>
    <string name="category_title">Category</string>
    <string name="price_title">Price</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="people_number">3 persons</string>
    <string name="food_kalories">247 cals</string>
    <string name="number_title">number</string>
    <string name="remove_btn">remove</string>
    <string name="add_btn">add</string>
    <string name="email">Email</string>
    <string name="foodtrex_n_login">FoodTrex \n Login</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="we_are_preparing_your_order">We are preparing your order</string>
    <string name="order">Order</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="see_our_main">\"See our Main \"</string>
    <string name="see_our_dessert">\" See our Dessert\"</string>
    <string name="back_home">Back Home</string>
    <string name="login_success">Successfully Loged In</string>
    <string name="login_error">Login error</string>
    <string name="logout">logout</string>
</resources>