<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DishDetail">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        android:background="@color/white">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            app:contentScrim="@color/white"
            app:expandedTitleMarginStart="@dimen/_16sdp"
            app:expandedTitleMarginEnd="@dimen/_72sdp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:id="@+id/imgItem"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:src="@drawable/dishes"
                app:layout_collapseParallaxMultiplier="0.9"
                />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="@dimen/_10sdp"
                app:cardElevation="@dimen/_5sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:padding="@dimen/_10sdp"
                        android:text="Dish name"
                        android:id="@+id/tv_dish_name"
                        android:textSize="@dimen/_15ssp"
                        android:gravity="center_horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                               />


                            <TextView
                                android:id="@+id/tvTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="30 min"
                                android:textSize="@dimen/_10ssp"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:textStyle="bold"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp"
                                android:paddingLeft="@dimen/_5sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />


                            <TextView
                                android:id="@+id/cal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/food_kalories"
                                android:textSize="@dimen/_10ssp"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:textStyle="bold"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>


                            <TextView
                                android:id="@+id/tvServing"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/people_number"
                                android:textSize="@dimen/_10ssp"
                                android:maxEms="10"
                                android:maxLines="2"
                                android:textStyle="bold"
                                android:paddingTop="@dimen/_10sdp"
                                android:paddingStart="@dimen/_5sdp"
                                android:paddingBottom="@dimen/_10sdp" />
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/ingredients_title"
                android:textSize="@dimen/_15ssp"
                android:gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_dish_ingredient"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_10ssp"
                        android:textStyle="bold"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingLeft="@dimen/_2sdp"
                        android:paddingRight="@dimen/_2sdp"
                        android:gravity="center|center_vertical"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/price_title"
                android:textSize="@dimen/_15ssp"
                android:gravity="center" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp"
                app:cardElevation="@dimen/_3sdp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_dish_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/_20ssp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_2sdp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/quantity_title"
                    android:textSize="@dimen/_15ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/number_title"
                    android:textSize="@dimen/_15ssp"
                    android:gravity="right"
                    android:layout_marginStart="60sp"
                    android:id="@+id/dish_number_quantity"/>

            </LinearLayout>




            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_3sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/btnRemove"
                        android:text="@string/remove_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/orange"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tvCounter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40sp"
                        android:layout_marginRight="40sp"
                        android:textSize="25sp"/>

                    <Button
                        android:id="@+id/btnAdd"
                        android:text="@string/add_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/pinkColor"
                        android:textSize="14sp"/>





                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add To Cart"
                android:id="@+id/addToCart"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:backgroundTint="@color/pinkColor"/>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</LinearLayout>